2004-04-21  Andrew Cagney  <cagney@redhat.com>

	* opncls.c (_bfd_new_bfd_contained_in): Copy "iovec".
	(struct opncls, opncls_btell, opncls_bseek, opncls_bread)
	(opncls_bwrite, opncls_bclose, opncls_bflush)
	(opncls_bstat, opncls_iovec, bfd_openr_iovec): Implement a
	bfd iovec that uses function callbacks.
	(bfd_close): Use the iovec's bclose.
	* cache.c (cache_btell, cache_bseek, cache_bread, cache_bwrite)
	(cache_bclose, cache_bflush, cache_bstat)
	(cache_iovec): New functions and global variable, implement a
	cache "iovec", where applicable set bfd_error.
	(bfd_cache_init, bfd_cache_close): Set/test the bfd's iovec.
	* bfdio.c (struct bfd_iovec): Define.
	(real_read): Delete function.
	(bfd_bread, bfd_bread, bfd_bwrite, bfd_tell, bfd_flush, bfd_stat)
	(bfd_seek, bfd_get_mtime, bfd_get_size): Use the bfd's "iovec",
	assume that bread and bwrite set bfd_error.
	* bfd.c (struct bfd): Add "iovec", update comments.
	* bfd-in2.h, libbfd.h: Re-generate.

2004-04-21  Andrew Cagney  <cagney@redhat.com>

	* libaout.h (enum machine_type): Add M_POWERPC_NETBSD.

2004-04-21  Eric Botcazou  <ebotcazou@act-europe.fr>

	* elflink.c (elf_gc_mark_dynamic_ref_symbol): New function.
	(bfd_elf_gc_sections): Fail if a shared object is being created.
	Do not fail if dynamic sections have been created.  Instead call
	elf_gc_mark_dynamic_ref_symbol to mark sections that contain
	dynamically referenced symbols.  Do not mark the whole graph
	rooted at .eh_frame, only the section proper.

2004-04-20  DJ Delorie  <dj@redhat.com>

	* reloc.c: Add BFD_RELOC_32_SECREL.
	* bfd-in2.h: Regenerate.
	* libbfd.h: Likewise.
	* coff-i386.c (howto_table) [COFF_WITH_PE]: Add R_SECREL32.
	(coff_i386_rtype_to_howto) [COFF_WITH_PE]: Handle it.
	(coff_i386_reloc_type_lookup) [COFF_WITH_PE]: Likewise.

2004-04-19  Jakub Jelinek  <jakub@redhat.com>

	* elf32-sparc.c (elf32_sparc_relocate_section): Handle
	relocs against hidden/protected undefweak symbols properly.