@@ -1,3 +1,11 @@
+2004-04-21  Bob Wilson  <bob.wilson@acm.org>
+
+	* elf32-xtensa.c (is_same_value): Add final_static_link argument and
+	require relocations against a weak symbol to reference the same
+	symbol hash entry if not a final, static link.
+	(get_cached_value, add_value_map): Add final_static_link argument.
+	(remove_literals): Pass final_static_link argument as needed.
+
 2004-04-21  Andrew Cagney  <cagney@redhat.com>
 
 	* opncls.c (_bfd_new_bfd_contained_in): Copy "iovec".
